# filesreader

./: README.md  filesreader.py  pyproject.toml
tests/: test_filesreader.py
tests/resources/: existing_file.txt
