[tool.poetry]
name = "filesreader"
version = "0.1.2"
description = "A small project to read files"
authors = ["Sergio lema <lema.sergio.85@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/serlesen/filesreader"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
